@@ -1,5 +1,9 @@
 2003-06-09  William Jon McCann  <mccann@jhu.edu>
 
+	* glines.c: Use new GamesFrame widget.
+
+	* Makefile.am (INCLUDES): Added libgames-support stuff.
+
 	* glines.c: Removed separator from dialogs as in HIG.
 
 2003-06-08  William Jon McCann  <mccann@jhu.edu>
